--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,17 @@
 	"name" : "jqterm",
 	"title" : "jqTerm",
 	"description" : "A JQuery plugin for a commandline emulator with custom interpreters and formatter",
-	"version" : "0.2.3",
+	"version" : "0.3.0",
 	"author" : {
 		"name" : "Amey Sakhadeo",
         "url" : "http://ameyms.com"
 	},
+    "main": ["./dist/jquery.term.min.js", "./dist/jquery.term.min.css"],
+    "ignore": [
+      "**/.*",
+      "**/.json",
+      "src"
+    ],
 	"dependencies": {
     "jquery": ">= 1.9.0"
   	},
@@ -15,5 +21,5 @@
         "type": "MIT",
         "url": "https://github.com/ameyms/jqterm/blob/master/LICENSE"
     }],
-    "keywords" : ["terminal", "shell", "emulator"]
+    "keywords" : ["terminal", "shell", "emulator", "jquery"]
 }
