--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "term",
-  "title": "jqTerm",
-  "description": "A JQuery plugin for a commandline emulator with custom interpreters and formatter",
-  "version": "0.3.0",
-  "author": {
-    "name": "Amey Sakhadeo",
-    "url": "http://ameyms.com"
-  },
-  "licenses": [
+    "name": "term",
+    "title": "jqTerm",
+    "description": "A JQuery plugin for a commandline emulator with custom interpreters and formatter",
+    "version": "0.3.0",
+    "author": {
+        "name": "Amey Sakhadeo",
+        "url": "http://ameyms.com"
+    },
+    "licenses": [
     {
       "type": "MIT",
       "url": "https://github.com/ameyms/jqterm/blob/master/LICENSE"
+    }],
+
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ameyms/jqterm.git"
+    },
+    "keywords": [
+        "terminal",
+        "shell",
+        "emulator"
+    ],
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-contrib-uglify": "~0.2.2",
+        "grunt-contrib-jshint": "~0.6.3",
+        "grunt-contrib-cssmin": "~0.6.1"
+    },
+    "scripts": {
+        "test": "grunt build"
     }
-  ],
-  "keywords": [
-    "terminal",
-    "shell",
-    "emulator"
-  ],
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-cssmin": "~0.6.1"
-  },
-  "scripts": {
-    "test": "grunt build"
-  }
 }
